--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -117,32 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CancelButton" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="DeleteErrorMessage" xml:space="preserve">
-    <value>Failed to delete the record.</value>
-  </data>
-  <data name="DeleteMessage" xml:space="preserve">
-    <value>Record deleted successfully.</value>
-  </data>
-  <data name="ErrorCodeExists" xml:space="preserve">
-    <value>{0} already exists.</value>
-  </data>
-  <data name="ErrorFailedToCreate" xml:space="preserve">
-    <value>Failed to create</value>
-  </data>
-  <data name="ErrorFailedToDelete" xml:space="preserve">
-    <value>Failed to delete the selected record.</value>
-  </data>
-  <data name="ErrorIdLessThanOne" xml:space="preserve">
-    <value>{0} can not be less than 1.</value>
-  </data>
-  <data name="ErrorMessage_PleaseContactYourAdministrator" xml:space="preserve">
-    <value>Please Contact Your Administrator</value>
-  </data>
-  <data name="ErrorMessage_ThisaccountdoesnotexistEnteravalidemailaddressorpassword" xml:space="preserve">
-    <value>This account does not exist. Enter a valid email address or password</value>
+  <data name="ErrorDeleteGeneralDepartmentMaster" xml:space="preserve">
+    <value>Failed to delete department due to associate record.</value>
   </data>
   <data name="LabelAction" xml:space="preserve">
     <value>Action</value>
@@ -155,29 +131,5 @@
   </data>
   <data name="LabelIsActive" xml:space="preserve">
     <value>Is Active</value>
-  </data>
-  <data name="ModelNotNull" xml:space="preserve">
-    <value>Model can not be null.</value>
-  </data>
-  <data name="RecordAddedSuccessMessage" xml:space="preserve">
-    <value>Record added successfully.</value>
-  </data>
-  <data name="RecordCreationSuccessMessage" xml:space="preserve">
-    <value>Record created successfully.</value>
-  </data>
-  <data name="RecordSavedSuccessMessage" xml:space="preserve">
-    <value>Record saved successfully.</value>
-  </data>
-  <data name="SaveButton" xml:space="preserve">
-    <value>Save</value>
-  </data>
-  <data name="SelectCentre" xml:space="preserve">
-    <value>-----Select Centre-----</value>
-  </data>
-  <data name="UpdateErrorMessage" xml:space="preserve">
-    <value>Failed to update record.</value>
-  </data>
-  <data name="UpdateMessage" xml:space="preserve">
-    <value>Record updated successfully.</value>
   </data>
 </root>
