--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -120,16 +120,31 @@
   <data name="ErrorDeleteGeneralDepartmentMaster" xml:space="preserve">
     <value>Failed to delete department due to associate record.</value>
   </data>
+  <data name="ErrorMessage_ThisaccountdoesnotexistEnteravalidemailaddressorpassword" xml:space="preserve">
+    <value>This account does not exist. Enter a valid email address or password</value>
+  </data>
   <data name="LabelAction" xml:space="preserve">
     <value>Action</value>
   </data>
+  <data name="LabelCancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
   <data name="LabelCentre" xml:space="preserve">
     <value>Centre</value>
+  </data>
+  <data name="LabelDepartmentList" xml:space="preserve">
+    <value>Department List</value>
   </data>
   <data name="LabelDepartments" xml:space="preserve">
     <value>Departments</value>
   </data>
   <data name="LabelIsActive" xml:space="preserve">
     <value>Is Active</value>
+  </data>
+  <data name="LabelSave" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="SelectCentre" xml:space="preserve">
+    <value>-----Select Centre-----</value>
   </data>
 </root>
