Code check-in for Admin Rolse List

--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -120,20 +120,35 @@
   <data name="ErrorDeleteAdminSanctionPost" xml:space="preserve">
     <value>Failed to delete admin saction post due to associate record.</value>
   </data>
+  <data name="ErrorDeleteGeneralCityMaster" xml:space="preserve">
+    <value>Failed to delete city due to associate record.</value>
+  </data>
   <data name="ErrorDeleteGeneralCountryMaster" xml:space="preserve">
     <value>Failed to delete country due to associate record.</value>
   </data>
   <data name="ErrorDeleteGeneralDepartmentMaster" xml:space="preserve">
     <value>Failed to delete department due to associate record.</value>
   </data>
+  <data name="ErrorDeleteGeneralDesignationMaster" xml:space="preserve">
+    <value>Failed to delete designation due to associate record.</value>
+  </data>
   <data name="ErrorDeleteGeneralNationalityMaster" xml:space="preserve">
     <value>Failed to delete nationality due to associate record.</value>
+  </data>
+  <data name="ErrorDeleteGeneralTaxGroupMaster" xml:space="preserve">
+    <value>Failed to delete tax group due to associate record.</value>
+  </data>
+  <data name="ErrorDeleteGeneralTaxMaster" xml:space="preserve">
+    <value>Failed to delete tax due to associate record.</value>
   </data>
   <data name="ErrorMessage_ThisaccountdoesnotexistEnteravalidemailaddressorpassword" xml:space="preserve">
     <value>This account does not exist. Enter a valid email address or password</value>
   </data>
   <data name="LabelAction" xml:space="preserve">
     <value>Action</value>
+  </data>
+  <data name="LabelAdminRoleList" xml:space="preserve">
+    <value>Admin Role List</value>
   </data>
   <data name="LabelAdminSanctionPostList" xml:space="preserve">
     <value>Admin Sanction Post List</value>
@@ -144,6 +159,9 @@
   <data name="LabelCentre" xml:space="preserve">
     <value>Centre</value>
   </data>
+  <data name="LabelCityList" xml:space="preserve">
+    <value>City List</value>
+  </data>
   <data name="LabelCountryList" xml:space="preserve">
     <value>Country List</value>
   </data>
@@ -153,6 +171,9 @@
   <data name="LabelDepartments" xml:space="preserve">
     <value>Departments</value>
   </data>
+  <data name="LabelDesignationList" xml:space="preserve">
+    <value>Designation List</value>
+  </data>
   <data name="LabelIsActive" xml:space="preserve">
     <value>Is Active</value>
   </data>
@@ -161,6 +182,12 @@
   </data>
   <data name="LabelSave" xml:space="preserve">
     <value>Save</value>
+  </data>
+  <data name="LabelTaxGroupList" xml:space="preserve">
+    <value>Tax Group List</value>
+  </data>
+  <data name="LabelTaxList" xml:space="preserve">
+    <value>Tax List</value>
   </data>
   <data name="SelectCentre" xml:space="preserve">
     <value>-----Select Centre-----</value>
