--- a/Coditech.Project/Common/Coditech.Resources/GeneralResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/GeneralResources.resx
@@ -135,8 +135,20 @@
   <data name="ErrorFailedToDelete" xml:space="preserve">
     <value>Failed to delete the selected record.</value>
   </data>
+  <data name="ErrorFileSizeLimitExceed" xml:space="preserve">
+    <value>File size limit exceed. It should be below{0} MB.</value>
+  </data>
   <data name="ErrorIdLessThanOne" xml:space="preserve">
     <value>{0} can not be less than 1.</value>
+  </data>
+  <data name="ErrorInvalidFileExtension" xml:space="preserve">
+    <value>Invalid File Extension</value>
+  </data>
+  <data name="ErrorInvalidFileName" xml:space="preserve">
+    <value>Invalid file name.</value>
+  </data>
+  <data name="ErrorInvalidFolderPath" xml:space="preserve">
+    <value>Invalid folder path.</value>
   </data>
   <data name="ErrorMessage_PleaseContactYourAdministrator" xml:space="preserve">
     <value>Please Contact Your Administrator</value>
