--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -147,8 +147,14 @@
   <data name="ErrorDeleteGeneralTaxMaster" xml:space="preserve">
     <value>Failed to delete tax due to associate record.</value>
   </data>
+  <data name="ErrorDeleteGymMemberDetails" xml:space="preserve">
+    <value>Failed to delete gym member due to associate record.</value>
+  </data>
   <data name="ErrorDeleteOrganisationCentreMaster" xml:space="preserve">
     <value>Failed to delete organisationCentre due to associate record.</value>
+  </data>
+  <data name="ErrorDeleteSystemGlobleSettingMaster" xml:space="preserve">
+    <value>Failed to delete Globle Setting due to associate record.</value>
   </data>
   <data name="ErrorMessage_ThisaccountdoesnotexistEnteravalidemailaddressorpassword" xml:space="preserve">
     <value>This account does not exist. Enter a valid email address or password</value>
@@ -182,6 +188,9 @@
   </data>
   <data name="LabelDesignationList" xml:space="preserve">
     <value>Designation List</value>
+  </data>
+  <data name="LabelGlobleSettingList" xml:space="preserve">
+    <value>Globle Setting List</value>
   </data>
   <data name="LabelIsActive" xml:space="preserve">
     <value>Is Active</value>
