--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -138,6 +138,9 @@
   <data name="ErrorDeleteGeneralNationalityMaster" xml:space="preserve">
     <value>Failed to delete nationality due to associate record.</value>
   </data>
+  <data name="ErrorDeleteGeneralOccupationMaster" xml:space="preserve">
+    <value>Failed to delete Occupation due to associate record.</value>
+  </data>
   <data name="ErrorDeleteGeneralRegionMaster" xml:space="preserve">
     <value>Failed to delete region due to associate record.</value>
   </data>
@@ -147,8 +150,14 @@
   <data name="ErrorDeleteGeneralTaxMaster" xml:space="preserve">
     <value>Failed to delete tax due to associate record.</value>
   </data>
+  <data name="ErrorDeleteOccupationMaster" xml:space="preserve">
+    <value>Failed to delete Occupation due to associate record.</value>
+  </data>
   <data name="ErrorDeleteOrganisationCentreMaster" xml:space="preserve">
     <value>Failed to delete organisationCentre due to associate record.</value>
+  </data>
+  <data name="ErrorDeleteSystemGlobleSettingMaster" xml:space="preserve">
+    <value>Failed to delete Globle Setting due to associate record.</value>
   </data>
   <data name="ErrorMessage_ThisaccountdoesnotexistEnteravalidemailaddressorpassword" xml:space="preserve">
     <value>This account does not exist. Enter a valid email address or password</value>
@@ -188,6 +197,9 @@
   </data>
   <data name="LabelNationalityList" xml:space="preserve">
     <value>NationalityList</value>
+  </data>
+  <data name="LabelOccupationList" xml:space="preserve">
+    <value>Occupation List</value>
   </data>
   <data name="LabelOrganisationList" xml:space="preserve">
     <value>Organisation List</value>
