--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -141,6 +141,9 @@
   <data name="ErrorDeleteGeneralEnumaratorGroup" xml:space="preserve">
     <value>Failed to delete enum group due to associate record.</value>
   </data>
+  <data name="ErrorDeleteGeneralMeasurementUnitMaster" xml:space="preserve">
+    <value>Failed to delete Measurement Unit due to associate record.</value>
+  </data>
   <data name="ErrorDeleteGeneralNationalityMaster" xml:space="preserve">
     <value>Failed to delete nationality due to associate record.</value>
   </data>
@@ -210,6 +213,9 @@
   <data name="LabelIsActive" xml:space="preserve">
     <value>Is Active</value>
   </data>
+  <data name="LabelMeasurementUnitList" xml:space="preserve">
+    <value>Measurement Unit List</value>
+  </data>
   <data name="LabelNationalityList" xml:space="preserve">
     <value>NationalityList</value>
   </data>
@@ -231,7 +237,7 @@
   <data name="LabelTaxList" xml:space="preserve">
     <value>Tax List</value>
   </data>
-  <data name="SelectCentre" xml:space="preserve">
+	<data name="SelectCentre" xml:space="preserve">
     <value>-----Select Centre-----</value>
   </data>
 </root>
