--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -159,6 +159,9 @@
   <data name="ErrorDeleteGeneralTaxMaster" xml:space="preserve">
     <value>Failed to delete tax due to associate record.</value>
   </data>
+  <data name="ErrorDeleteGymBodyMeasurementType" xml:space="preserve">
+    <value>Failed to delete Body Measurement Type</value>
+  </data>
   <data name="ErrorDeleteGymMemberDetails" xml:space="preserve">
     <value>Failed to delete gym member due to associate record.</value>
   </data>
@@ -210,6 +213,9 @@
   <data name="LabelGlobleSettingList" xml:space="preserve">
     <value>Globle Setting List</value>
   </data>
+  <data name="LabelGymBodyMeasurementTypeList" xml:space="preserve">
+    <value>Body Measurement Type List</value>
+  </data>
   <data name="LabelIsActive" xml:space="preserve">
     <value>Is Active</value>
   </data>
@@ -222,11 +228,17 @@
   <data name="LabelOccupationList" xml:space="preserve">
     <value>Occupation List</value>
   </data>
+  <data name="LabelOrganisationCentrewiseDepartmentList" xml:space="preserve">
+    <value>Organisation Centrewise Department List</value>
+  </data>
   <data name="LabelOrganisationList" xml:space="preserve">
     <value>Organisation List</value>
   </data>
   <data name="LabelRegionList" xml:space="preserve">
     <value>Region List</value>
+  </data>
+  <data name="LabelRunningNumbersList" xml:space="preserve">
+    <value>Label Running Numbers List</value>
   </data>
   <data name="LabelSave" xml:space="preserve">
     <value>Save</value>
@@ -237,7 +249,7 @@
   <data name="LabelTaxList" xml:space="preserve">
     <value>Tax List</value>
   </data>
-	<data name="SelectCentre" xml:space="preserve">
+  <data name="SelectCentre" xml:space="preserve">
     <value>-----Select Centre-----</value>
   </data>
 </root>
