--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -174,6 +174,9 @@
   <data name="ErrorDeleteGymBodyMeasurementType" xml:space="preserve">
     <value>Failed to delete Body Measurement Type</value>
   </data>
+  <data name="ErrorDeleteGymMemberBodyMeasurement" xml:space="preserve">
+    <value>Failed to delete gym member body measurement due to associate record.</value>
+  </data>
   <data name="ErrorDeleteGymMemberDetails" xml:space="preserve">
     <value>Failed to delete gym member due to associate record.</value>
   </data>
