code checkin for financial year

--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -123,6 +123,9 @@
   <data name="ErrorDeleteAdminSanctionPost" xml:space="preserve">
     <value>Failed to delete admin saction post due to associate record.</value>
   </data>
+  <data name="ErrorDeleteEmployeeDetails" xml:space="preserve">
+    <value>Failed to delete employee detaild due to associate record.</value>
+  </data>
   <data name="ErrorDeleteGeneralCityMaster" xml:space="preserve">
     <value>Failed to delete city due to associate record.</value>
   </data>
@@ -140,6 +143,9 @@
   </data>
   <data name="ErrorDeleteGeneralEnumaratorGroup" xml:space="preserve">
     <value>Failed to delete enum group due to associate record.</value>
+  </data>
+  <data name="ErrorDeleteGeneralFinancialYearMaster" xml:space="preserve">
+    <value>Failed to delete country due to associate record.</value>
   </data>
   <data name="ErrorDeleteGeneralMeasurementUnitMaster" xml:space="preserve">
     <value>Failed to delete Measurement Unit due to associate record.</value>
@@ -210,8 +216,14 @@
   <data name="LabelDesignationList" xml:space="preserve">
     <value>Designation List</value>
   </data>
+  <data name="LabelEmployeeList" xml:space="preserve">
+    <value>Employee List</value>
+  </data>
   <data name="LabelEnumGroupList" xml:space="preserve">
     <value>Enum Group</value>
+  </data>
+  <data name="LabelFinancialYearList" xml:space="preserve">
+    <value>FinancialYear List</value>
   </data>
   <data name="LabelGlobleSettingList" xml:space="preserve">
     <value>Globle Setting List</value>
@@ -251,8 +263,5 @@
   </data>
   <data name="LabelTaxList" xml:space="preserve">
     <value>Tax List</value>
-  </data>
-  <data name="SelectCentre" xml:space="preserve">
-    <value>-----Select Centre-----</value>
   </data>
 </root>
