--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -283,7 +283,7 @@
     <value>Region List</value>
   </data>
   <data name="LabelRunningNumbersList" xml:space="preserve">
-    <value>Label Running Numbers List</value>
+    <value>Running Numbers List</value>
   </data>
   <data name="LabelSave" xml:space="preserve">
     <value>Save</value>
