--- a/Coditech.Project/Common/Coditech.Resources/GeneralResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/GeneralResources.resx
@@ -123,6 +123,9 @@
   <data name="DeleteErrorMessage" xml:space="preserve">
     <value>Failed to delete the record.</value>
   </data>
+  <data name="DeleteInventoryCategory" xml:space="preserve">
+    <value>Record deleted Inventory Category successfully.</value>
+  </data>
   <data name="DeleteMessage" xml:space="preserve">
     <value>Record deleted successfully.</value>
   </data>
@@ -170,6 +173,9 @@
   </data>
   <data name="UpdateErrorMessage" xml:space="preserve">
     <value>Failed to update record.</value>
+  </data>
+  <data name="UpdateInventoryCategory" xml:space="preserve">
+    <value>Record updated Inventory Category successfully.</value>
   </data>
   <data name="UpdateMessage" xml:space="preserve">
     <value>Record updated successfully.</value>
