Code check-in for Inventory Category

--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -265,7 +265,7 @@
     <value>Body Measurement Type List</value>
   </data>
   <data name="LabelInventoryCategoryList" xml:space="preserve">
-    <value>InventoryCategoryy List</value>
+    <value>Inventory Category List</value>
   </data>
   <data name="LabelIsActive" xml:space="preserve">
     <value>Is Active</value>
