--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -195,6 +195,9 @@
   <data name="ErrorDeleteInventoryCategory" xml:space="preserve">
     <value>Failed to delete inventory category due to associate record.</value>
   </data>
+  <data name="ErrorDeleteInventoryItemStorageDimension" xml:space="preserve">
+    <value>Failed to delete Inventory Item Storage Dimension due to associate record.</value>
+  </data>
   <data name="ErrorDeleteOccupationMaster" xml:space="preserve">
     <value>Failed to delete Occupation due to associate record.</value>
   </data>
@@ -266,6 +269,9 @@
   </data>
   <data name="LabelInventoryCategoryList" xml:space="preserve">
     <value>Inventory Category List</value>
+  </data>
+  <data name="LabelInventoryItemStorageDimensionList" xml:space="preserve">
+    <value>Inventory Item Storage Dimension List</value>
   </data>
   <data name="LabelIsActive" xml:space="preserve">
     <value>Is Active</value>
