--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -201,6 +201,9 @@
   <data name="ErrorDeleteInventoryItemModelGroup" xml:space="preserve">
     <value>Failed to delete Inventory Item Model Group due to associate record.</value>
   </data>
+  <data name="ErrorDeleteInventoryProductDimensionGroup" xml:space="preserve">
+    <value>Failed to delete Inventory Product Dimension Group due to associate record.</value>
+  </data>
   <data name="ErrorDeleteInventoryItemStorageDimension" xml:space="preserve">
     <value>Failed to delete Inventory Item Storage Dimension due to associate record.</value>
   </data>
@@ -278,6 +281,9 @@
   </data>
   <data name="LabelInventoryCategoryList" xml:space="preserve">
     <value>Inventory Category List</value>
+  </data>
+  <data name="LabelInventoryProductDimensionGroupList" xml:space="preserve">
+    <value>Inventory Product Dimension Group List</value>
   </data>
   <data name="LabelInventoryItemStorageDimensionList" xml:space="preserve">
     <value>Inventory Item Storage Dimension List</value>
