--- a/Coditech.Project/Common/Coditech.Resources/GeneralResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/GeneralResources.resx
@@ -126,12 +126,6 @@
   <data name="DeleteErrorMessage" xml:space="preserve">
     <value>Failed to delete the record.</value>
   </data>
-  <data name="DeleteInventoryCategory" xml:space="preserve">
-    <value>Record deleted Inventory Category successfully.</value>
-  </data>
-  <data name="DeleteInventoryItemStorageDimension" xml:space="preserve">
-    <value>Record deleted Inventory Item Storage Dimension successfully.</value>
-  </data>
   <data name="DeleteMessage" xml:space="preserve">
     <value>Record deleted successfully.</value>
   </data>
@@ -139,7 +133,7 @@
     <value>{0} already exists.</value>
   </data>
   <data name="ErrorFailedToCreate" xml:space="preserve">
-    <value>Failed to create</value>
+    <value>Failed to create.</value>
   </data>
   <data name="ErrorFailedToDelete" xml:space="preserve">
     <value>Failed to delete the selected record.</value>
@@ -180,10 +174,7 @@
   <data name="UpdateErrorMessage" xml:space="preserve">
     <value>Failed to update record.</value>
   </data>
-  <data name="UpdateInventoryCategory" xml:space="preserve">
-    <value>Record updated Inventory Category successfully.</value>
-  </data>
   <data name="UpdateMessage" xml:space="preserve">
-    <value>Failed to update record</value>
+    <value>Record updated successfully.</value>
   </data>
 </root>
