--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -298,7 +298,7 @@
     <value>Inventory Item Storage Dimension List</value>
   </data>
   <data name="LabelInventoryItemTrackingDimensionList" xml:space="preserve">
-    <value>Label Inventory Item Tracking Dimension List</value>
+    <value>Inventory Item Tracking Dimension List</value>
   </data>
   <data name="LabelInventoryProductDimensionList" xml:space="preserve">
     <value>Inventory Product Dimension List</value>
