--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -384,4 +384,7 @@
   <data name="LabelHospitalDoctorVisitingChargesList" xml:space="preserve">
     <value>Hospital Doctor Visiting Charges List</value>
   </data>
+  <data name="ErrorDeletePatientRegistrationDetails" xml:space="preserve">
+    <value>Failed to delete Patient Registration due to associate record.</value>
+  </data>
 </root>
