Code Correction of Storage Dimension Group and Item Tracking Dimension Group Form Creation

--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -393,4 +393,10 @@
   <data name="ErrorDeletePatientRegistrationDetails" xml:space="preserve">
     <value>Failed to delete Patient Registration due to associate record.</value>
   </data>
+  <data name="ErrorDeleteInventoryItemTrackingDimensionGroup" xml:space="preserve">
+    <value>Failed to delete Inventory Item Tracking Dimension Group due to associate record.</value>
+  </data>
+  <data name="LabelInventoryItemTrackingDimensionGroupList" xml:space="preserve">
+    <value>Inventory Item Tracking Dimension Group List</value>
+  </data>
 </root>
