--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -399,4 +399,10 @@
   <data name="LabelInventoryItemTrackingDimensionGroupList" xml:space="preserve">
     <value>Inventory Item Tracking Dimension Group List</value>
   </data>
+  <data name="LabelInventoryGeneralItemMasterList" xml:space="preserve">
+    <value>Inventory General Item Master List</value>
+  </data>
+  <data name="ErrorDeleteInventoryGeneralItemMaster" xml:space="preserve">
+    <value>Failed to delete Inventory General Item Master due to associate record.</value>
+  </data>
 </root>
