--- a/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
+++ b/Coditech.Project/Common/Coditech.Resources/AdminResources.resx
@@ -405,6 +405,12 @@
   <data name="LabelHospitalDoctorOPDScheduleList" xml:space="preserve">
     <value>Hospital Doctor OPD Schedule List</value>
   </data>
+  <data name="ErrorDeleteMediaSettingMaster" xml:space="preserve">
+    <value>Failed to delete media setting master due to associate record.</value>
+  </data>
+  <data name="LabelMediaSettingMasterList" xml:space="preserve">
+    <value>Media Setting Master List</value>
+  </data>
   <data name="LabelInventoryGeneralItemMasterList" xml:space="preserve">
     <value>Inventory General Item Master List</value>
   </data>
